# huobi-rs

./: Cargo.toml
examples/: account.rs  market.rs  symbols.rs
src/: account.rs  client.rs  error.rs  general.rs  lib.rs  models.rs
src/client/: account.rs  market.rs
