[package]
name = "huobi"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.14"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
time = "0.1.38"
ring = "0.13.0-alpha"
hex = "0.3"
base64 = "~0.6.0"

[lib]
name = "huobi"
